--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,9 @@ body{
   margin: 0px;
   background-color:#444;
   font-size: 18px;
+  background-image: url('dancefloor.jpg');
+  background-size: 100%;
+  background-repeat: no-repeat;
 }
 body, a:link, a:visited, a:active{
   color: lightblue;
@@ -21,7 +24,9 @@ body, a:link, a:visited, a:active{
   background-color: #777;
 }
 .dancer{
-  border:10px solid red;
-  border-radius:10px;
+  border-width:30px;
+  border-style: solid;
+  border-color:  red;
+  border-radius:30px;
   position:absolute;
 }
