--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,13 @@ body{
   background-color:#444;
   font-size: 18px;
   background-image: url('dancefloor.jpg');
-  background-size: 100%;
+  background-size: cover;
   background-repeat: no-repeat;
 }
 body, a:link, a:visited, a:active{
   color: lightblue;
 }
-.title, .addDancerButton{
+.title, .addDancerButton, .addCrazyCarreyButton, .addDancingSpiderManButton {
   padding:5px 12px;
   float:right;
 }
@@ -24,9 +24,16 @@ body, a:link, a:visited, a:active{
   background-color: #777;
 }
 .dancer{
-  border-width:30px;
+  border-width:10px;
   border-style: solid;
   border-color:  red;
-  border-radius:30px;
+  border-radius:10px;
   position:absolute;
+}
+.crazyCarrey {
+  border-width: 0px;
+  border-style: solid;
+  position: absolute;
+  width: 300px;
+  height: auto;
 }
