--- a/styles.css
+++ b/styles.css
@@ -37,3 +37,10 @@ body, a:link, a:visited, a:active{
   width: 300px;
   height: auto;
 }
+.dancingSpiderMan {
+  border-width: 0px;
+  border-style: solid;
+  position: absolute;
+  width: 200px;
+  height: auto;
+}
